syntax = "proto3";

option go_package = "rpc/pb";

package comment;

import "user.proto";

//  评论操作
//  登录用户对视频进行评论
//  POST

message Comment {
  int64 id = 1;           // 评论的视频id
  user.User user = 2;     // 评论用户信息
  string content = 3;     // 评论内容
  string create_date = 4; // 评论发布日期，格式mm-dd
  int64 like_count = 5;   // 该评论点赞数量
  int64 tease_count = 6;  // 该评论点踩数量
}
message CommentActionRequest {
  string token = 1;         // 用户鉴权token
  int64 video_id = 2;       // 视频id
  int32 action_type = 3;    // 1-发布评论,2-删除评论
  string comment_text = 4;  // 用户填写的评论内容,action_type=1时使用
  int64 comment_id = 5;     // 要删除的评论id,action_type=2时使用
}
message CommentActionResponse {
  int32 status_code = 1;     // 状态码,0成功,其他值失败
  string status_msg = 2;     // 返回状态描述
  Comment comment = 3;       // 评论成功返回评论内容,不需要重新拉取整个评论列表
}


//  视频评论列表
//  查看视频的所有评论，按发布时间倒序
//  GET

message CommentListRequest {
  string token = 1;     // 用户鉴权token
  int64 video_id = 2;   // 视频id
}
message CommentListResponse {
  int32 status_code = 1;              // 状态码，0-成功，其他值-失败
  string status_msg = 2;              // 返回状态描述
  repeated Comment comment_list = 3;  // 评论列表
}

//  rpc impl

service CommentService {
  rpc CommentAction(CommentActionRequest) returns(CommentActionResponse) {}
  rpc CommentList(CommentListRequest) returns(CommentListResponse) {}
}