/*
 * @Autor: violet apricity ( Zhuangpx )
 * @Date: 2023-08-21 01:37:32
 * @LastEditors: violet apricity ( Zhuangpx )
 * @LastEditTime: 2023-09-01 15:29:27
 * @FilePath: \Road2TikTok\service\video_service\pb\user.proto
 * @Description:  Zhuangpx : Violet && Apricity:/ The warmth of the sun in the winter /
 */
// 指定版本
syntax = "proto3";

//  指定路径
option go_package = "video_service/pb";

//  包名
package user;

//  ============= 用户表 =============
message User {
  int64 id = 1;                     // 用户id
  string name = 2;                  // 用户名
  int64 follow_count = 3;           // 关注数
  int64 follower_count = 4;         // 粉丝数
  bool is_follow = 5;               // 是(1)/否(0)已关注
  string avatar = 6;                // 用户头像
  string background_image = 7;      // 用户主页背景图
  string signature = 8;             // 用户个人简介
  int64 total_favorited = 9;        // 获赞数量
  int64 work_count = 10;            // 作品数量
  int64 favorite_count = 11;        // 点赞数量
}

//  ============= 用户信息 =============
message UserInfoRequest {
  string token = 1;
  int64 user_id = 2;
}
message UserInfoResponse {
  int32 status_code = 1;
  string status_msg = 2;
  User user = 3;
}

//  ============= 用户登录 =============
message UserLoginRequest {
  string username = 1;
  string password = 2;
}
message UserLoginResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

//  ============= 用户注册 =============
message UserRegisterRequest {
  string username = 1;
  string password = 2;
}
message UserRegisterResponse {
  int32 status_code = 1;
  string status_msg = 2;
  int64 user_id = 3;
  string token = 4;
}

//  ============= 方法接口 =============
service UserService {
  rpc UserInfo (UserInfoRequest) returns (UserInfoResponse) {}
  rpc Login(UserLoginRequest) returns (UserLoginResponse) {}
  rpc Register(UserRegisterRequest) returns (UserRegisterResponse) {}
}
